--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^8.15.0"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
